src/test/deca/context/invalid/rvalue_not_subclass.deca
// Description:
//    Trying to define a bad class
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class B{
    
}

class A extends B{   
    
}

{
    A a = new B();
}